# DumpSpace

./: .gitignore  readme.md  requirements.txt
BCSL606-lab/: lab1.py  lab10.py  lab2.py  lab3.py  lab4.py  lab5.py  lab6.py  lab7.py  lab8.py  lab9.py
BCSL606-lab/lab/: lab.py
BCSL606_lab/: lab1.py  lab3.py  lab4.py  lab6.py
BCSL606_lab/lab/: .lab.py.swp  lab.py
GenAI/: lab1.py  lab10.py  lab2.py  lab3.py  lab4.py  lab5.py  lab6.py  lab7.py  lab8.py  lab9.py
GenAI/utils/: sample_text.txt
Skills4Future/: Lab 7_To Handling Energy Consumption Data with Pandas.ipynb  Lab_8_Visualizing_Using_Matplotlib.ipynb  Lab_9_Visualizing_Using_Seaborn.ipynb  basics.ipynb  documentation.txt  pandas.ipynb  requirements.txt
android-server/: readme.md
asset-scraper/: README.md  download_assets.py
asset-scrapper/: download_assets.py
candidates-resume-gh-ranker/: .gitignore  README.md  check_models_gemini.py  check_models_opanai.py  create_csv.py  rank_candidates.py  requirements.txt
handwriting_recog/: main.py
jni/: README.MD  binder_utils.h  media_projection.c
jni-binder-IPC/: LICENSE  README.MD
parallel-computing/: lab1  lab1.c  lab2  lab2.c  lab3  lab3.c  lab4  lab4.c  lab5  lab5.c  lab6  lab6.c  lab7  lab7.c  lab8  lab8.c  lab9  lab9.c
python-pandas/: README.md  practice.ipynb
rust-android-server/: .gitignore
rust-android-server/mirrox_server_jar/rust_binder/: Cargo.toml
rust-android-server/mirrox_server_jar/rust_binder/src/: binder_transaction.rs  binder_utils.rs  main.rs  media_projection.rs
server/: readme.md
some_python_stuff/: main.py
(+33 files in other folders)
