[package]
name = "rust_binder"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { version = "0.27", features = ["fs", "user"] }
jni = "0.21"
log = "0.4"
android_logger = "0.13"
libc = "0.2"

[lib]
name = "rust_binder"
crate-type = ["cdylib"]

[profile.release]
debug = true

[build-dependencies]
cc = "1.0"